--- a/norfolk-data-sci-presentations.css
+++ b/norfolk-data-sci-presentations.css
@@ -77,7 +77,7 @@ div.logo {
   bottom: 0px;
   padding: 10px;
   z-index: 100;
-	font-size: 100%;
+	font-size: 150%;
 }
 
 /* default placement of images is center */
@@ -110,26 +110,75 @@ div.logo {
   padding-left: 10px;
   vertical-align: middle;
   align: left;
-  }
+}
 
 .footer {
-    color: black !important;
-    position: fixed !important; 
-    top: 90% !important;
-    text-align: center !important;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100% !important;
+  color: black !important;
+  position: fixed !important; 
+  top: 90% !important;
+  text-align: center !important;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100% !important;
 }
 
 .footer2 {
-    color: black !important;
-    background: #E8E8E8 !important;
-    position: fixed !important; 
-    top: 90% !important;
-    text-align: left !important;
-    height: 205px; !important
-    margin-left: auto;
-    margin-right: auto;
-    width: 95% !important;
+  color: black !important;
+  background: #E8E8E8 !important;
+  position: fixed !important; 
+  top: 90% !important;
+  text-align: left !important;
+  height: 205px; !important
+  margin-left: auto;
+  margin-right: auto;
+  width: 95% !important;
+}
+
+.footer3 {
+  color: #555555 !important;
+  text-align: left !important;
+  position: absolute !important;
+  left: 0px !important;
+  bottom: 0px !important;
+  padding: 10px !important;
+  z-index: 100 !important;
+	font-size: .5em !important;
+}
+
+
+.code-div {
+  margin-top: 10px !important;
+  max-width: 95% !important;
+  border: 1px solid #ccc !important;
+  padding: 10px !important;
+  margin-bottom: 1em !important;
+  display: block !important;
+  position: relative !important;
+  width: 90% !important;
+  margin: 15px auto !important;
+  text-align: left !important;
+  font-family: monospace !important;
+  font-size: .7em !important;
+  line-height: 1.2em !important;
+  word-wrap: break-word !important;
+  box-shadow: 0 0 6px rgba(0,0,0,.3) !important;
+}
+
+.wrapper {
+  display: table;
+}
+
+.wrapper ul {
+  display: table-cell;
+  vertical-align: top;
+}
+
+.wrapper img {
+  margin: 100px !important;
+  display: table-cell;
+  vertical-align: top;
+}
+
+.extra-li-top-pad li {
+  padding-top: 20px !important;
 }
