--- a/norfolk-data-sci-presentations.css
+++ b/norfolk-data-sci-presentations.css
@@ -112,29 +112,25 @@ div.logo {
   align: left;
 }
 
-.footer {
-  color: black !important;
-  position: fixed !important; 
-  top: 90% !important;
-  text-align: center !important;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100% !important;
-}
-
-.footer2 {
-  color: black !important;
-  background: #E8E8E8 !important;
-  position: fixed !important; 
-  top: 90% !important;
+.attribution {
+  color: #555555 !important;
   text-align: left !important;
-  height: 205px; !important
-  margin-left: auto;
-  margin-right: auto;
-  width: 95% !important;
+  position: fixed !important;
+  width: 100%;
+  left: 0px !important;
+  bottom: 0px !important;
+  padding: 10px !important;
+	font-size: .6em !important;
 }
 
-.footer3 {
+.attribution-link {
+  position: absolute; 
+  z-index:1000 !important;
+}
+
+.reference {
+  box-sizing: border-box !important;
+  width: 100% !important;
   color: #555555 !important;
   text-align: left !important;
   position: absolute !important;
@@ -142,9 +138,20 @@ div.logo {
   bottom: 0px !important;
   padding: 10px !important;
   z-index: 100 !important;
-	font-size: .5em !important;
+	font-size: 75% !important;
+	display: block !important;
+  margin-top: 10px !important;
+  margin-bottom: 5px !important;
+  margin-right: 35px !important;
+  background-color: #cadef6 !important;
+  padding-top: 8px !important;
+  padding-bottom: 10px !important;
+  padding-left: 15px !important;
+  padding-right: 8px !important;
+  border-color: #1f63b6 !important;
+  border-width: 1px !important;
+  border-style: solid !important;
 }
-
 
 .code-div {
   margin-top: 10px !important;
